--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "date-fns": "^1.30.1",
+    "jsonwebtoken": "^8.4.0",
     "knex": "^0.16.3",
     "mysql": "^2.16.0",
     "validate.js": "^0.12.0"
