--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "eslint": "^5.12.1",
     "jest": "^23.6.0",
+    "serverless-domain-manager": "^2.6.13",
     "serverless-openwhisk": ">=0.13.0"
   },
   "dependencies": {
