--- a/serverless.yml
+++ b/serverless.yml
@@ -30,6 +30,13 @@ provider:
   name: aws
   runtime: nodejs8.10
   region: eu-west-1
+  usagePlan:
+    quota:
+      limit: 5000
+      period: DAY
+    throttle:
+      burstLimit: 200
+      rateLimit: 100
 
 # you can overwrite defaults here
 #  stage: dev                                                                                                                                                                                                                                                
@@ -141,6 +148,14 @@ functions:
           path: posts/{id}
           method: delete
           cors: true
+      - http:
+          path: posts/{id}/likes
+          method: post
+          cors: true
+      - http:
+          path: posts/{id}/likes
+          method: delete
+          cors: true
 
 
 #    The following are a few example events you can configure
@@ -197,6 +212,9 @@ resources:
         EngineMode: serverless
         MasterUsername: ${self:custom.parameters.dbUsername}
         MasterUserPassword: ${self:custom.parameters.dbPassword}
+        ScalingConfiguration:
+          MinCapacity: 2
+          MaxCapacity: 8
   Outputs:
     DbUrl:
       Value: 
